add event for grid color change

--- a/styles.css
+++ b/styles.css
@@ -11,19 +11,16 @@
     grid-template-columns: repeat(16, 1fr);
     grid-template-rows: repeat(16, 1fr);
     background-color: #ffffff;
-    padding: 10px;
+    justify-content: center;
+    align-content: center;
+    padding: 10%;
+    margin: auto;
+    height: 75%;
+    width: 75%;
   }
 
   .sketch-pixel {
-    background-color: rgba(255, 255, 255, 0.8);
+    /* background-color: rgba(255, 255, 255, 0.8); */
     border: 1px solid rgba(0, 0, 0, 0.8);
     padding: 20px;
-    font-size: 30px;
-    text-align: center;
-  }
-  
-  /* Style the content */
-  .content {
-    background-color: #ddd;
-    padding: 10px;
   }
